# NativeRenderingPlugin

PluginSource/projects/Linux/: CMakeLists.txt
